<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android=
    "http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_string"
        android:textSize="36sp" />


    <TextView
        android:id="@+id/teamA_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teamA_title_string"
        android:textSize="28sp"
       />
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal" >

       <Button
           android:id="@+id/decrease_TeamB_Button"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/decrease_string" />

       <Button
           android:id="@+id/increase_TeamA_Button3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/increase_string"
           />


   </LinearLayout>

    <TextView
        android:id="@+id/teamA_score_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10"
        android:textSize="28sp"
        />

    <TextView
        android:id="@+id/teamB_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teamB_title_string"
        android:textSize="28sp"
         />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/decrease_TeamA_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decrease_string"
            />
        <Button
            android:id="@+id/increase_TeamB_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increase_string"
            />
    </LinearLayout>





    <TextView
        android:id="@+id/teamB_score_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10"
        android:textSize="28sp"
       />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton1" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton2" />
    </RadioGroup>


</LinearLayout>